3. Fix tag-editor's 'Various Artists' workaround when all tracks is selected.
4. Set minimum font size for info page.
5. Only automatically start playing songs if we are replacing the playqueue, or
   the song is the first song added via the commandline.
6. Fix transcoding with new ffmpeg - thanks to Martin Blumenstingl
   for the patch.

0.7.0
-----
 1. Add dynamic playlist support.
 2. Fix detection of non standard filename covers.
 3. Clear any existing search when 'Locate In Library' is activated.
 4. In tag-editor, only set placeholder text to '(Various)' for fields where
    there are actually some values set.
 5. Add now playing info to MPRIS interface - thanks to Martin Blumenstingl
    for the patch.
 6. Better, less hacky, workaround for QAbstractItemView shift-select bug
    (https://bugreports.qt-project.org/browse/QTBUG-18009). Thanks to Spitfire
    from qtcentre.org forums for fix.
 7. Add a 'search' action (Ctrl-F) that will move focus to curent tab's search
    field - or to play queue search field (if play queue has focus).
 8. Add 'Raise' support to MPRIS interface.
 9. Added a cantata-specific dbus interface with 'showPage(page, focusSearch)'
    method. So, to raise cantata, show library page, and focus on its search
    field:
        qdbus org.kde.cantata /org/mpris/MediaPlayer2 Raise
        qdbus org.kde.cantata /cantata showPage library true

    'page' can be either; library, albums, folders, playlists, dynamic, streams,
    lyrics, info, serverinfo, or devices. The page will only be shown if it is
    currently enabled.
10. Show song information in playqueue tooltips.
11. Default to 'Alt+<num>' for page shortcuts.
12. Improve MPD connection reliability. When one socket (command or idle) is
    disconnected, only reconnect that one. If a reconnect fails, then
    disconnect both. If we receive an empty reply to a command and socket has
    been closed - then attempt to reconnect and resend command.